css/site-plan.css
@import url('https://fonts.googleapis.com/css?family=Domine|IM+Fell+French+Canon&display=swap');

:root {
  --primary-color: #57585A;
  --secondary-color: #EEEEEE;
  --accent1-color: #6f1a07;
  --accent2-color: #F0E5D5;
  --heading-font: "IM Fell French Canon";
  --paragraph-font: Domine, serif;
}
html {
  background-color: var(--primary-color);
}
body {
  max-width: 900px;
  margin: 0 auto;
  font-family: var(--paragraph-font);
  color: var(--primary-color);
  background-color: var(--secondary-color);
  padding: 0 2em;
}
img {
  max-width: 100%;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--heading-font);
  color: var(--accent1-color);
}
h2 {
  font-size: 2.5em;
  padding-bottom: 3px;
  border-bottom: 2px solid;
}
li {
  padding-bottom: 1em;
}
header {
  padding: 1em;
  text-align: center;
  font-size: x-large;
  color: var(--primary-color);
  background: radial-gradient(var(--accent2-color), var(--secondary-color))
}
header > h1 {
  color: var(--accent1-color);
}
footer {
  font-size: x-small;
  padding-bottom: 2em;
}
p {
  font-family: var(--paragraph-font);
  color: var(--primary-color);
  line-height: 1.8em;
  margin: 2em;
  margin-top: 0;
}
p.colored {
  color: var(--accent1-color);
  background: radial-gradient(var(--accent2-color), var(--secondary-color));
}
.colors {
  width: 100%;
  min-width: 350px;
  margin: auto;
  text-align: center;
}
.colors th {
  background-color: #999;
}
.colors td {
  width: 25%;
  height: 3em;
}
.primary {
  background-color: var(--primary-color);
}
.secondary {
  background-color: var(--secondary-color);
}
.accent1 {
  background-color: var(--accent1-color);
}
.accent2 {
  background-color: var(--accent2-color);
}
nav {
  background-color: var(--accent1-color);
  line-height: 3em;
  text-align: center;
  font-size: 1.2em;
}
nav > ul {
  list-style-type: none;
  display: flex;
}
nav li {
  padding: 0;
}
nav a {
  padding: 1em;
  min-width: 70px;
  text-decoration: none;
}
nav a:link,
nav a:visited {
  color: var(--accent2-color);
}
nav a:hover {
  background-color: var(--primary-color);
}

